# esp32s3

./: README.md
DesktopScreen/: CMakeLists.txt  partitions.csv  sdkconfig
DesktopScreen/main/: CMakeLists.txt  app_main.c  component.mk  sdkconfig
DesktopScreen/main/include/: ds_system_data.h
DesktopScreen/main/src/: ds_system_data.c
ai_exmple/: CMakeLists.txt  partitions.csv  sdkconfig
ai_exmple/main/: CMakeLists.txt  ai_exmple.c  ds_inmp441.c  ds_inmp441.h  ds_max98357.c  ds_max98357.h  ds_wifi_ap_sta.h  http_client.c  http_client.h  wifi_sta_ap.c
esp32s3-sr/: CMakeLists.txt  sdkconfig
esp32s3-sr/main/: idf_component.yml  main.c
esp32s3-sr/main/app/: app_sr.c
esp32s3-sr/main/hal/: hal_i2s.c
lichuang_esp32s3/12-speech_recognition/: sdkconfig
lichuang_esp32s3/12-speech_recognition/main/: app_sr.c  main.c
lichuang_esp32s3/lcd/: sdkconfig
lichuang_esp32s3/lcd/main/: esp32_s3_szp.c
lvgl_dome/: sdkconfig
lvgl_dome/components/BSP/: ascii_font.h  (+2 more)
lvgl_dome/main/: CMakeLists.txt  Kconfig.projbuild  ezgif.c  ezgif1.c  lvgl_dome.c  test.c
lvgl_dome/main/lv_port/: lv_port_disp.c
lvgl_exmple/lvgl_wifi_scan/: CMakeLists.txt  lv_conf.h  partitions.csv  sdkconfig
lvgl_exmple/lvgl_wifi_scan/main/: CMakeLists.txt  lvgl_dome.c
lvgl_exmple/lvgl_wifi_scan/main/lvgl_ui/: lvgl_wifi_scan_ui.c  lvgl_wifi_scan_ui.h
lvgl_exmple/lvgl_wifi_scan/main/net/: wifi_scan.c  wifi_scan.h
spiffs_play_mp3/: sdkconfig
spiffs_play_mp3/main/: idf_component.yml  main.c
wifi_demo/wifi_sta/: CMakeLists.txt  sdkconfig
wifi_demo/wifi_sta_ap/: CMakeLists.txt  sdkconfig
(+34 files in other folders)
